# Regulation-Control-Mapping

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Architecture-v3.md  Architecture.md  CHANGELOG.md  CONTRIBUTING.md  CONTROLNEXUS_AUDIT.md  Dockerfile  Parameter-Walkthrough.md  README.md  REPO_AUDIT.md  _check_schema.py  _fix_app_conflict.py  _fix_risk_dedup.py  _test_card.py  control-builder-architecture.md  demo_information_inventory.md  plan.md  pyproject.toml  section_1__controls.xlsx
config/: default.yaml  deliverable_plan.md  placement_methods.yaml  risk_taxonomy.json  risk_taxonomy.yaml  standards.yaml  taxonomy.yaml
data/: APQC_Template.xlsx  README.md  regulations yy.xlsx
doc/: ARCHITECTURE.md  FRONTEND_REDESIGN.md  PATCH_CHECKPOINT_PLAN.md  TECHNICAL_DIAGRAM.md  TEST_GAPS.md
docs/: EVALUATION_SYSTEM.md  RISK_INVENTORY_BUILDER.md  analysis-tab-workflow-and-tool-calling.md  architecture-v3-diagrams.md  architecture.mmd  asi-mock-data-generation-prompt.md  build-from-form-deep-dive.md  cleanup-audit.md  controlforge-modular-guide.md  controlforge-modular-plan.md  controlforge-modular-testing-guide.md  controlforge-tab-guide.md  front-end-redesign.md  future-architecture-and-tool-vision.md  known-gaps.md  risk-inventory-demo-executive-scenarios.md  risk-inventory-demo-frontend-deep-dive.md  risk-inventory-mock-data-dictionary.md  section-control-generation-prompt.md
langgraph-multiagent-skeleton/: Dockerfile  PATTERNS.md  README.md  pyproject.toml
langgraph-multiagent-skeleton/config/: default.yaml
langgraph-multiagent-skeleton/src/skeleton/: __init__.py  exceptions.py
langgraph-multiagent-skeleton/src/skeleton/agents/: __init__.py  base.py  planner.py  researcher.py  reviewer.py  synthesizer.py
langgraph-multiagent-skeleton/src/skeleton/core/: __init__.py  config.py  events.py  models.py  state.py  transport.py
langgraph-multiagent-skeleton/src/skeleton/export/: __init__.py  markdown.py
langgraph-multiagent-skeleton/src/skeleton/graphs/: __init__.py  research_graph.py  state.py
langgraph-multiagent-skeleton/src/skeleton/tools/: __init__.py  implementations.py  nodes.py  schemas.py
langgraph-multiagent-skeleton/src/skeleton/ui/: app.py
langgraph-multiagent-skeleton/src/skeleton/validation/: __init__.py  validator.py
langgraph-multiagent-skeleton/tests/: conftest.py  test_agents.py  test_graph.py  test_tools.py  test_validator.py
scripts/: README.md  fix_risk_dedup.py  generate_synthetic_policies.py  patch_checkpoint.py  patch_improvements.py
tests/: __init__.py  _stub_llm.py  conftest.py  test_agents.py  test_assess_graph.py  test_classify_graph.py  test_config.py  test_config_proposer.py  test_config_wizard.py  test_constants.py  test_domain_config.py  test_domain_tools.py  test_e2e.py  test_edge_case_detector.py  test_evaluation.py  test_export.py  test_forge_modular_graph.py  test_graphs.py  test_ingest.py  test_memory.py  test_models.py  test_pipeline.py  test_policy_parser.py  (+11 more)
(+232 files in other folders)
