[project]
name = "regrisk"
version = "0.1.0"
description = "Regulatory Obligation → APQC → Control Coverage → Risk Scoring"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "streamlit>=1.35",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
