[project]
name = "controlnexus"
version = "0.1.0"
description = "Internal controls management system with gap analysis and multi-agent remediation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "openpyxl>=3.1",
    "pypdf>=5.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",  # transitive dep of langgraph; pinned here for reproducibility
    "streamlit>=1.35",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/controlnexus"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
